@@ -907,6 +907,7 @@ function(.Object, value) {
 	return(.Object)
     }
 > 
+> 
 > ## PR#15691
 > setGeneric("fun", function(x, ...) standardGeneric("fun"))
 [1] "fun"
@@ -920,4 +921,44 @@ function(.Object, value) {
 > 
 > stopifnot(identical(fun(1), do.call(fun, list(1))))
 > ## failed in R < 3.1.0
+> 
+> 
+> ## PR#15680
+> setGeneric("f", function(x, y) standardGeneric("f"))
+[1] "f"
+> setMethod("f", c("numeric", "missing"), function(x, y) x)
+[1] "f"
+> try(?f(1))
+Error in .helpForCall(topicExpr, parent.frame()) : 
+  no documentation for function 'f' and signature 'x = "numeric", y = "missing"'
+> 
+> ## "..." is not handled
+> setGeneric("f", function(...) standardGeneric("f"))
+[1] "f"
+> setMethod("f", "numeric", function(...) c(...))
+[1] "f"
+> try(?f(1,2))
+Error in .helpForCall(topicExpr, parent.frame()) : 
+  no documentation for function 'f' and signature '... = "numeric"'
+> 
+> ## defaults in the generic formal arguments are not considered
+> setGeneric("f", function(x, y=0) standardGeneric("f"))
+[1] "f"
+> setMethod("f", c("numeric", "numeric"), function(x, y) x+y)
+[1] "f"
+> try(?f(1))
+Error in .helpForCall(topicExpr, parent.frame()) : 
+  no documentation for function 'f' and signature 'x = "numeric", y = "numeric"'
+> 
+> ## Objects with S3 classes fail earlier
+> setGeneric("f", function(x) standardGeneric("f"))
+[1] "f"
+> setMethod("f", "numeric", function(x) x)
+[1] "f"
+> setOldClass(c("foo", "numeric"))
+> n <- structure(1, class=c("foo", "numeric"))
+> try(?f(n))
+Error in .helpForCall(topicExpr, parent.frame()) : 
+  no documentation for function 'f' and signature 'x = "numeric"'
+> ## different failures in R < 3.1.0.
 > 
